# mine-fanren

./: .gitignore  CLAUDE.md  README.md  analyze_missing.py  pyproject.toml
docs/: 251107-chapter_chunk_extractor_design.md  251107-chapter_validation_results.md  251113-extraction_tables_design.md  251113-milestone-summary.md
langchain_usage/: __init__.py  missing_chapter_analyzer.py  missing_chapter_validator.py
scripts/: README.md  install_deps.py  run_fanren_workunit.py  run_task_generator.py  sqlite_cli.py  workflow_cli.py
src/: chapter_chunk_extractor_fanren_impl.py  missing_chapter_analyzer.py  models.py  utils.py
src/agents/: fanren_er_extract_agent.py  fanren_er_extract_prompts.py  types.py
src/imod/: fanren_claim_extract_module.py  fanren_claim_extract_prompts.py  fanren_er_claim_workunit.py  fanren_er_extract_mod.py  fanren_er_extract_module.py  fanren_er_extract_prompts.py  types.py
src/rmod/: fanran_chapter_chunk_module.py
src/store/: __init__.py  sqlite_conn.py  sqlite_ddl.py  sqlite_repo.py  sqlite_types.py
src/workunit/: __init__.py  fanren_task_generator_workunit.py  fanren_text_chunk_workunit.py
tests/: test_claim_extractor_demo.py  test_er_extractor_demo.py  test_fanren_chunk_extracrtor.py
